<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:tag="character_info_portrait"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/info_image"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/info_image_content_description"
        tools:src="@drawable/marvel" />

    <TextView
        tools:text="Title"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/info_image"
        android:layout_margin="20dp"
        android:textSize="35sp"
        android:textColor="@color/model_info_title_color"
        android:id="@+id/info_title"
        android:shadowRadius="10"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowColor="@color/model_info_title_shadow_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:elevation="4dp"
        android:layout_width="match_parent"
        android:layout_below="@id/info_image"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="80dp"
            android:background="@drawable/line">

            <LinearLayout
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/info_number_1"
                    android:gravity="center"
                    android:textSize="30sp"
                    tools:text="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:gravity="center"
                    android:textSize="15sp"
                    android:text="@string/info_number_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <LinearLayout
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/info_number_2"
                    android:gravity="center"
                    android:textSize="30sp"
                    tools:text="5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:gravity="center"
                    android:textSize="15sp"
                    android:text="@string/info_number_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/info_number_3"
                    android:gravity="center"
                    android:textSize="30sp"
                    tools:text="23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:gravity="center"
                    android:textSize="15sp"
                    android:text="@string/info_number_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </LinearLayout>

        <FrameLayout
            android:background="@color/mode_info_bottom_section"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/info_description"
                android:textColor="@color/model_info_bottom_section_text"
                android:layout_margin="20dp"
                android:text="@string/mode_info_description_text"
                tools:text="@string/lorem_ipsum"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>


    </LinearLayout>


</RelativeLayout>